crates/toml/tests/snapshots/invalid/integer/negative-oct.stderr
TOML parse error at line 1, column 16
  |
1 | negative-oct = -0o755
  |                ^
integers with a radix cannot be signed, expected nothing
